2017-06-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Switch the log location from /var/log/openvas/ to /var/log/gvm/.

	* CMakeLists.txt: Set location for GVM_LOG_DIR (replaces
	OPENVAS_LOG_DIR) accordingly.

	* INSTALL: Adjust the documentation accordingly.

	* src/CMakeLists.txt: Removed OPENVAS_LOG_DIR because
	this variable is not needed anymore anywhere in the code.

	* src/openvassd_log_conf.cmake_in: Use GVM_LOG_DIR instead of
	OPENVAS_LOG_DIR.

2017-06-21  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_connect): Update documentation.

	* nasl/nasl_init.c (libfuncs): Update args for ssh_connect and
	ssh_userauth.

2017-06-19  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_smb.c (nasl_win_cmd_exec): Adjust to handle case where
	response is in unicode.

2017-06-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/network.c (host_info_init): Set vhosts element.
	(host_info_free): Free vhosts element.

	* misc/plugutils.c (plug_fork_child): New function.
	(plug_get_host_fqdn): Get vhosts values from vhosts hostinfo element.
	Use new function.
	(plug_get_key): Use plug_fork_child(). Adjust code accordingly.

	* misc/scanneraux.h (script_infos): Add vhosts element.

	* src/attack.c (init_host_kb): Don't set hostinfo/vhosts kb entry.

2017-06-13  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Add the file name to the nasl context to be showed in case of error

	* nasl/nasl_grammar.y: Define new macro FNAME. Add FNAME as
	third argument to the call to alloc_tree_cell() function.
	(init_nasl_ctx): Copy the script_name to the naslctxt.

	* nasl/nasl_tree.c (alloc_tree_cell): New argument filename. Set the
	filename.
	(alloc_typed_cell, alloc_RE_cell, alloc_expr_cell, dup_cell): Add the
	third argument to the call to alloc_tree_cell().
	(free_cell): Free filename.

	* nasl/nasl_tree.h (tree_cell): Add filename char pointer member.

	* nasl/exec.c (nasl_exec): Copy the filename from the tree cell to